Checkout Management App/objects/CMALog__c.object
<CustomObject>
    <description>An event log that you or Salesforce Customer Support can use to diagnose issues in the Checkout Management App.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>API Callout Request limits exceeded</fullName>
                </value>
                <value>
                    <fullName>App connection with Stripe failure</fullName>
                </value>
                <value>
                    <fullName>Batch Failure</fullName>
                </value>
                <value>
                    <fullName>Create Transaction failure</fullName>
                </value>
                <value>
                    <fullName>Get Invoice item failure</fullName>
                </value>
                <value>
                    <fullName>Get Subscription failure</fullName>
                </value>
                <value>
                    <fullName>Import Existing Data failure</fullName>
                </value>
                <value>
                    <fullName>Internal System Error</fullName>
                </value>
                <value>
                    <fullName>Number of sent emails exceeded</fullName>
                </value>
                <value>
                    <fullName>Rest Callout Queue Failure</fullName>
                </value>
                <value>
                    <fullName>Stripe duplicated event</fullName>
                </value>
                <value>
                    <fullName>Stripe Event Processor failure</fullName>
                </value>
                <value>
                    <fullName>Stripe Invalid event received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exception__c</fullName>
        <label>Exception</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StackTraceId__c</fullName>
        <label>Stack Trace ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Checkout Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checkout Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>